name:                pfm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ymherklotz/pfm#readme
license:             BSD3
license-file:        LICENSE
author:              Yann Herklotz Grave
maintainer:          ymherklotz@gmail.com
copyright:           2019 Yann Herklotz Grave
category:            Image
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     PFM
  build-depends:       attoparsec
                     , base >= 4.7 && < 5
                     , bytestring
                     , text
                     , binary
                     , data-binary-ieee754
  default-extensions:  OverloadedStrings

executable readpfm
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , pfm
                     , text
                     , bytestring
  default-extensions:  OverloadedStrings
