name: pfm
version: 0.1.0.0
synopsis: PFM image parsing library for Debevec's format.
description:
  PFM image parsing library for Paul Debevec's format.
  .
  The website containing an explanation of the format
  can be found here <http://www.pauldebevec.com/Research/HDR/PFM/>.
homepage: https://github.com/ymherklotz/pfm#readme
license: BSD3
license-file: LICENSE
author: Yann Herklotz Grave
maintainer: yann [at] yannherklotzgrave [dot] com
copyright: 2019 Yann Herklotz Grave
category: Image
build-type: Simple
cabal-version: >=1.10
extra-source-files: README.md
tested-with: GHC==8.4.3, GHC==8.2.2, GHC==8.0.2, GHC==7.10.3, GHC==7.8.4
           , GHC==7.6.3, GHC==7.4.2, GHC==7.2.2, GHC==7.0.4

source-repository head
  type: git
  location: git://github.com/ymherklotz/pfm.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  exposed-modules: PFM
  build-depends: attoparsec
               , base >= 4.7 && < 5
               , bytestring
               , text
               , binary
               , data-binary-ieee754
  default-extensions: OverloadedStrings

executable readpfm
  hs-source-dirs: app
  main-is: Main.hs
  default-language: Haskell2010
  build-depends: base >= 4.7 && < 5
               , pfm
               , text
               , bytestring
               , criterion
  default-extensions: OverloadedStrings
